Add PV Digital Twin

--- a/dieselGenerator/dieselStatus.ipynb
+++ b/dieselGenerator/dieselStatus.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Standby Diesel Generator operation based on Energy Supply and Demand"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
