--- a/knn/knn.ipynb
+++ b/knn/knn.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implement K-Nearest Neighbors Algorithm to classify the dataset and print the correct and incorrect predictions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -292,13 +299,6 @@
     "plt.title(\"KNN Decision Boundary\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
