--- a/powerSystemStability/ps_stability.ipynb
+++ b/powerSystemStability/ps_stability.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bfc440e2",
+   "metadata": {},
+   "source": [
+    "### Power System stability assessment using Decision Tree based ID3 algorithm"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "75003d58-1d11-4a55-a57a-255602c746ee",
